# qprs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: example_1.rs  example_1_osqp.rs
src/: constraint.rs  lib.rs  main.rs  objective.rs  osqp.rs  problem.rs  solution.rs  standard_form.rs  utils.rs  variable.rs  variables.rs
