[package]
name = "qp-model"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "problem"
path = "src/main.rs"

[[bin]]
name = "osqp-sample"
path = "src/osqp.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ndarray = "0.15.6"
osqp = "0.6.2"
